# meson

./: meson.build  run_mypy.py  run_project_tests.py  run_single_test.py  run_tests.py
.github/workflows/: codeql-analysis.yml  cygwin.yml  images.yml  macos.yml  msys2.yml  nonnative.yml  os_comp.yml  unusedargs_missingreturn.yml
ci/: run.ps1
ci/ciimage/bionic/: install.sh
ci/ciimage/cuda/: install.sh
ci/ciimage/gentoo/: install.sh
ci/ciimage/ubuntu-rolling/: install.sh
data/: meson.build
docs/markdown/: Builtin-options.md
docs/markdown/snippets/: about_minimum_python_version.md
mesonbuild/: _pathlib.py  _typing.py  arglist.py  build.py  coredata.py  depfile.py  envconfig.py  environment.py  mcompile.py  mconf.py  mdevenv.py  mdist.py  mesondata.py  mesonmain.py  minit.py  minstall.py  mintro.py  mlog.py  mparser.py  msetup.py  msubprojects.py  mtest.py  munstable_coredata.py  optinterpreter.py  programs.py  rewriter.py
mesonbuild/ast/: interpreter.py  introspection.py  postprocess.py  printer.py  visitor.py
mesonbuild/backend/: backends.py  ninjabackend.py  nullbackend.py  vs2010backend.py  vs2012backend.py  vs2013backend.py  vs2015backend.py  vs2017backend.py  vs2019backend.py  vs2022backend.py  xcodebackend.py
mesonbuild/cmake/: common.py  executor.py  fileapi.py  generator.py  interpreter.py  toolchain.py  traceparser.py  tracetargets.py
mesonbuild/compilers/: asm.py  c.py  compilers.py  cpp.py  cs.py  cuda.py  cython.py  d.py  detect.py  fortran.py  java.py  objc.py  objcpp.py  rust.py  swift.py  vala.py
mesonbuild/compilers/mixins/: arm.py  ccrx.py  clang.py  clike.py  compcert.py  elbrus.py  emscripten.py  gnu.py  intel.py  islinker.py  pgi.py  ti.py  visualstudio.py  xc16.py
mesonbuild/dependencies/: __init__.py  base.py  boost.py  cmake.py  coarrays.py  configtool.py  cuda.py  detect.py  dev.py  dub.py  factory.py  framework.py  hdf5.py  misc.py  mpi.py  pkgconfig.py  platform.py  python.py  qt.py  scalapack.py  ui.py
mesonbuild/interpreter/: compiler.py  dependencyfallbacks.py  interpreter.py  interpreterobjects.py  kwargs.py  mesonmain.py  type_checking.py
mesonbuild/interpreter/primitives/: array.py  boolean.py  dict.py  integer.py  range.py  string.py
mesonbuild/interpreterbase/: _unholder.py  baseobjects.py  decorators.py  disabler.py  helpers.py  interpreterbase.py
mesonbuild/linkers/: base.py  detect.py  linkers.py
mesonbuild/mesonlib/: platform.py  posix.py  universal.py  vsenv.py  win32.py
mesonbuild/modules/: __init__.py  cmake.py  dlang.py  fs.py  gnome.py  hotdoc.py  i18n.py  java.py  keyval.py  pkgconfig.py  python.py  python3.py  qt.py  simd.py  sourceset.py  unstable_cuda.py  unstable_external_project.py  unstable_rust.py  unstable_wayland.py  windows.py
mesonbuild/scripts/: __init__.py  clangformat.py  clangtidy.py  cleantrees.py  cmake_run_ctgt.py  copy.py  coverage.py  delwithsuffix.py  depfixer.py  depscan.py  dirchanger.py  env2mfile.py  externalproject.py  gettext.py  gtkdochelper.py  hotdochelper.py  itstool.py  meson_exe.py  msgfmthelper.py  pycompile.py  python_info.py  regen_checker.py  run_tool.py  scanbuild.py  symbolextractor.py  tags.py  uninstall.py  vcstagger.py
mesonbuild/templates/: cpptemplates.py  cstemplates.py  ctemplates.py  cudatemplates.py  dlangtemplates.py  fortrantemplates.py  javatemplates.py  mesontemplates.py  objcpptemplates.py  objctemplates.py  rusttemplates.py  samplefactory.py  sampleimpl.py  valatemplates.py
mesonbuild/utils/: core.py  universal.py
mesonbuild/wrap/: __init__.py  wrap.py  wraptool.py
postprocess/mesonpostprocess/: main.py
test cases/common/165 get project license/: meson.build
test cases/common/187 args flattening/: meson.build
test cases/common/44 pkgconfig-gen/: meson.build  test.json
test cases/common/44 pkgconfig-gen/dependencies/: meson.build
test cases/cuda/17 separate compilation linking/: meson.build
test cases/failing/71 run_command unclean exit/: test.json
test cases/frameworks/15 llvm/: meson.build
test cases/frameworks/24 libgcrypt/: meson.build  test.json
test cases/frameworks/6 gettext/: meson.build  meson_options.txt  test.json
test cases/frameworks/6 gettext/data/: meson.build
test cases/frameworks/6 gettext/data2/: meson.build
test cases/frameworks/9 wxwidgets/: meson.build
test cases/linuxlike/7 library versions/: meson.build  test.json
test cases/python/2 extmodule/: meson.build
unittests/: allplatformstests.py  baseplatformtests.py  helpers.py  linuxliketests.py  platformagnostictests.py  pythontests.py  rewritetests.py
